# IASC_Proyecto_Final

./: README.md  api.py  config.py  main.py  pyproject.toml  system_prompt.txt  tests_xaitoolkit.py  xai_agent.py
agents/: critic_agent.py  dataset_profiler_agent.py  model_selector_agent.py  xai_agent.py
datasets/: bac_dataset.csv  bac_dataset_metadata.json
static/: index.html
tools/: FallbackToolkit.py  XAIToolkit.py
utils/: dataset_cleaning.py  dataset_utils.py  models.py  user_input_handling.py
