[project]
name = "iasc-proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alibi>=0.9.6",
    "dice-ml>=0.12",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy >=1.26,<2.0",
    "ollama>=0.6.1",
    "pandas>=1.0.0,<3.0.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.44,<0.51",
    "uvicorn>=0.46.0",
]
